Added browser requirements to page.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,7 +14,9 @@ and open the template in the editor.
         <script type="text/javascript" src="js/jquery/jquery-1.11.0.js"></script>
     </head>
     <body>
-        <div id="header"><h1>Feel Outside The Box</h1></div>
+        <div id="header"><h1>Feel Outside The Box</h1>
+        (Requires the browser to support HTML5 Audio. Currently at least Chrome works.)
+        </div>
         <hr />
         <div id="content">
             <div id="enchant-stage"></div>
