Added browser requirements to page.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,8 +14,9 @@ and open the template in the editor.
         <script type="text/javascript" src="js/jquery/jquery-1.11.0.js"></script>
     </head>
     <body>
-        <div id="header"><h1>Feel Outside The Box</h1>
-        (Requires the browser to support HTML5 Audio. Currently at least Chrome works.)
+        <div id="header"><h1>Feel Outside The Box v1.1</h1>
+        (Requires the browser to support HTML5 Audio. Currently at least Chrome works.)<br />
+        <a href="ggj/index.html">Want to play the original GGJ2014 of the game? Click here!</a>
         </div>
         <hr />
         <div id="content">
